[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/multiplayer_main_panel.gd" type="Script" id=1]
[ext_resource path="res://ui/loading_circle.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/res/popup_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://icons/back_icon.svg" type="Texture" id=4]
[ext_resource path="res://fonts/res/popup_font_major.tres" type="DynamicFont" id=5]
[ext_resource path="res://tools/vertical_button.gd" type="Script" id=6]
[ext_resource path="res://icons/host_icon.svg" type="Texture" id=7]
[ext_resource path="res://icons/quit_icon.svg" type="Texture" id=8]
[ext_resource path="res://fonts/res/popup_font_minor.tres" type="DynamicFont" id=9]

[node name="MultiplayerMainPanel" type="PopupPanel"]
margin_right = 550.0
margin_bottom = 520.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="WaitingContainer" type="VBoxContainer" parent="MainContainer"]
margin_top = 169.0
margin_right = 542.0
margin_bottom = 303.0
size_flags_vertical = 6

[node name="LoadingCircle" parent="MainContainer/WaitingContainer" instance=ExtResource( 2 )]
margin_right = 542.0
rect_min_size = Vector2( 0, 100 )

[node name="WaitingLabel" type="Label" parent="MainContainer/WaitingContainer"]
margin_top = 104.0
margin_right = 542.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 3 )
text = "Waiting for assets to be importedâ€¦"
align = 1
autowrap = true

[node name="HostOrJoinContainer" type="VBoxContainer" parent="MainContainer"]
visible = false
margin_right = 542.0
margin_bottom = 472.0
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MainContainer/HostOrJoinContainer"]
margin_right = 542.0
margin_bottom = 350.0
custom_constants/hseparation = 10
columns = 2

[node name="HostButton" type="Button" parent="MainContainer/HostOrJoinContainer/GridContainer"]
margin_right = 266.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 3
script = ExtResource( 6 )
texture = ExtResource( 7 )
vertical_text = "Host Game"
font_override = ExtResource( 5 )

[node name="JoinButton" type="Button" parent="MainContainer/HostOrJoinContainer/GridContainer"]
margin_left = 276.0
margin_right = 542.0
margin_bottom = 250.0
size_flags_horizontal = 3
script = ExtResource( 6 )
texture = ExtResource( 8 )
vertical_text = "Join Game"
font_override = ExtResource( 5 )

[node name="HostCodeLabel" type="Label" parent="MainContainer/HostOrJoinContainer/GridContainer"]
margin_top = 254.0
margin_right = 266.0
margin_bottom = 350.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Create a room for your friends to join over the internet with a room code."
align = 1
autowrap = true

[node name="JoinCodeLabel" type="Label" parent="MainContainer/HostOrJoinContainer/GridContainer"]
margin_left = 276.0
margin_top = 254.0
margin_right = 542.0
margin_bottom = 350.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Join a friend's room over the internet using their room code."
align = 1
autowrap = true

[node name="HostIPLabel" type="Label" parent="MainContainer/HostOrJoinContainer/GridContainer"]
visible = false
margin_top = 254.0
margin_right = 266.0
margin_bottom = 416.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Create a room for your local network, or over the internet, for your friends to join using your IP address."
align = 1
autowrap = true

[node name="JoinIPLabel" type="Label" parent="MainContainer/HostOrJoinContainer/GridContainer"]
visible = false
margin_top = 254.0
margin_right = 266.0
margin_bottom = 383.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Join a friend's room on the local network, or over the internet, using their IP address."
align = 1
autowrap = true

[node name="IPAddressButton" type="CheckButton" parent="MainContainer/HostOrJoinContainer"]
margin_top = 432.0
margin_right = 305.0
margin_bottom = 472.0
size_flags_horizontal = 0
size_flags_vertical = 10
custom_fonts/font = ExtResource( 9 )
text = "(Advanced) Direct Connection"

[node name="CloseButton" type="Button" parent="MainContainer"]
margin_top = 476.0
margin_right = 100.0
margin_bottom = 512.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 3 )
text = "Back"
icon = ExtResource( 4 )
expand_icon = true

[connection signal="pressed" from="MainContainer/HostOrJoinContainer/GridContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="MainContainer/HostOrJoinContainer/GridContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="toggled" from="MainContainer/HostOrJoinContainer/IPAddressButton" to="." method="_on_IPAddressButton_toggled"]
[connection signal="pressed" from="MainContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
